--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -109,7 +109,7 @@
                 </div>
             </div>
         }
-        @if (Model != null && Model.getFinalPriceData != null)
+        @if (Model != null && HttpContextAccessor.HttpContext.Session.GetString(CDictionary.SK_PAY_MODEL) != null)
         {
             <div class="row ">
                 <div class="col-md-12 col-lg-12">
@@ -117,21 +117,21 @@
                     <div class="order-box align-items-center">
                         <div class="d-flex align-items-center">
                             <h4 class="mr-auto">小計</h4>
-                            <span class="mr-2 font-weight-bold subprice-font">NT</span><div class=" font-weight-bold subprice-font" id="finalSubtotal">@Model.getFinalPriceData.subtotal</div>
+                            <span class="mr-2 font-weight-bold subprice-font">NT</span><div class=" font-weight-bold subprice-font" id="finalSubtotal">@payModel.subtotal</div>
                         </div>
                         <div class="d-flex align-items-center">
                             <h4 class="mr-auto">運費</h4>
-                            <span class="mr-2 font-weight-bold subprice-font">+NT</span><div class=" font-weight-bold subprice-font" id="finalShippingFee">@Model.getFinalPriceData.shippingFee</div>
+                            <span class="mr-2 font-weight-bold subprice-font">+NT</span><div class=" font-weight-bold subprice-font" id="finalShippingFee">@payModel.shippingFee</div>
                         </div>
                         <hr class="my-1">
                         <div class="d-flex align-items-center">
                             <h4 class="mr-auto">總折扣</h4>
-                            <span class="mr-2 font-weight-bold subprice-font">-NT</span><div class=" font-weight-bold subprice-font" id="finalTotalDiscount">@Model.getFinalPriceData.finalBonus</div>
+                            <span class="mr-2 font-weight-bold subprice-font">-NT</span><div class=" font-weight-bold subprice-font" id="finalTotalDiscount">@payModel.finalBonus</div>
                         </div>
                         <hr>
                         <div class="d-flex gr-total align-items-center">
                             <h5 class="mr-auto">總計</h5>
-                            <span class="mr-2 font-weight-bold" style="color: #CE0000;font-size: 26px;">NT</span><div class=" h3 price-font font-weight-bold" id="allTotalPrice">@Model.getFinalPriceData.finalAmount</div>
+                            <span class="mr-2 font-weight-bold" style="color: #CE0000;font-size: 26px;">NT</span><div class=" h3 price-font font-weight-bold" id="allTotalPrice">@payModel.finalAmount</div>
                         </div>
                         <hr>
 
