--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1271,6 +1271,33 @@
     </div>
 </div>
 
+<!-- 小動畫-->
+<div id="fullScreenContainer">
+    <div class="containers position-relative">
+        <div class="position-absolute top-0 start-0">
+            <div class="animate animate01">
+                <div class="catAnimate"></div>
+            </div>
+        </div>
+        <div class="position-absolute top-0 end-0">
+            <button class="btn btn-primary" id="skip"> Skip </button>
+        </div>
+        <div class="position-absolute top-50 start-50 translate-middle">
+            <div class="popup" id="my-popup">
+                <img src="https://i.imgur.com/z3dc846.png" alt="Popup Image" class="popup-image">
+            </div>
+            <div class="animate animate02">
+                <div class="catAnimate "></div>
+            </div>
+        </div>
+        <div class="position-absolute bottom-0 end-0">
+            <div class="animate animate03">
+                <div class="catAnimate "></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--中間主畫面End-->
 @section Scripts{
     <!-- ALL JS FILES -->
