--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/ImageModerator.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/ImageModerator.cshtml
@@ -19,9 +19,9 @@
         }
 
         #analysing {
-            border: none; /* 移除边框 */
-            background-color: transparent; /* 设置背景为透明 */
-            outline: none; /* 移除聚焦时的外边框 */
+            border: none; 
+            background-color: transparent; 
+            outline: none; 
         }
     </style>
 }
@@ -55,7 +55,7 @@
     </div>
 </div>
 <!-- End All Title Box -->
-<!-- Start Shop Detail  -->
+
 
 <div class="container">
     <div class="row">
@@ -223,14 +223,7 @@
                             var text = visionResult['description']['captions'][0]['text'];
                             var confidence = visionResult['description']['captions'][0]['confidence'];
                             var descriptionText = "";
-                            /*
-                            var translateText = translateEnToChinese(text);
-                            if (translateText) { 
-                                var descriptionText = `原文:${text}\n翻譯:${translateText}\n準確度: ${(confidence * 100).toFixed(2)}% `;
-                            }else {
-                                var descriptionText = `內容:${text}\n準確度: ${(confidence * 100).toFixed(2)}% `;
-                            }
-                            */
+
                             translateEnToChinese(text)
                             .then(translateText => {
                                 if (translateText) {
@@ -307,7 +300,7 @@
                                 var borderColor3 = (Category3 * 100) >= 70 ? 'rgb(255, 99, 132)' : 'rgb(75, 192, 192)';
 
                                 const ctx = document.getElementById('myChart');
-                                const labels = ['成人內容', '種族歧視', '衝擊畫面'];  // 设置 X 轴上对应的标签
+                                const labels = ['成人內容', '種族歧視', '衝擊畫面'];  
                                 const dataChart = {
                                     labels: labels,
                                     datasets: [{
@@ -315,28 +308,28 @@
                                         label: '審核結果圖',
                                         data: [(Category1 * 100).toFixed(2), (Category2 * 100).toFixed(2), (Category3 * 100).toFixed(2)],
                                         fill: true,
-                                        backgroundColor: [      // 设置每个柱形图的背景颜色
+                                        backgroundColor: [      
                                             backgroundColor1,
                                             backgroundColor2,
                                             backgroundColor3,
                                         ],
-                                        borderColor: [     //设置每个柱形图边框线条颜色
+                                        borderColor: [     
                                             borderColor1,
                                             borderColor2,
                                             borderColor3,
                                         ],
-                                        borderWidth: 1     // 设置线条宽度
+                                        borderWidth: 1     
                                     }]
                                 };
                                 const config = {
-                                    type: 'bar', // 设置图表类型
-                                    data: dataChart,  // 设置数据集
+                                    type: 'bar', 
+                                    data: dataChart,  
                                     options: {
                                         indexAxis: 'y',
                                         scales: {
                                             x: {
-                                                max: 100, // 设置 x 轴的最大值为 100
-                                                min: 0,   // 如果需要，也可以设置 x 轴的最小值
+                                                max: 100, 
+                                                min: 0,   
                                             },
                                         },
                                     }
@@ -544,23 +537,14 @@
             };
 
             try {
-                // const response = await fetch(`${endpoint} + ${route}`, requestOptions);
-                // const response = await fetch("https://api.cognitive.microsofttranslator.com//translate?api-version=3.0&from=en&to=zh-Hant", requestOptions);
+
                 const response = await fetch("https://api.cognitive.microsofttranslator.com//translate?api-version=3.0&from=en&to=en", requestOptions);
 
                 const data = await response.json();
 
-                // 從 API 響應中獲取翻譯後的文本
-                // const translatedText = data[0].translations[0].text;
-
-
-                // 在這裡可以處理翻譯後的文本，例如進行評論等
-
-                // console.log("翻譯後的文本:", translatedText);
                 console.log("HELLO");
                 console.log(data);
 
-                // return translatedText;
             } catch (error) {
                 console.error("發生錯誤:", error);
                 return null;
@@ -574,9 +558,7 @@
     <script>
         // 使用 Google Cloud Vision API 檢測圖像中的臉部
         function detectFaces(imgUrlForFaces) {
-                var apiKey = 'AIzaSyDde-nxrODtr304UiNFD1YPjclvwU2s53M';// 替換成您的 Google Cloud Vision API 金鑰
-
-            // var imageUrl = 'https://msit150team02blob.blob.core.windows.net/msit150team02/15025.jpg';
+                var apiKey = 'AIzaSyDde-nxrODtr304UiNFD1YPjclvwU2s53M';
             var imageUrl = imgUrlForFaces;
 
 
@@ -658,48 +640,6 @@
 
             // 圖像 URL
             var imageUrl = 'https://msit150team02blob.blob.core.windows.net/msit150team02/dog.jpg';
-            /*
-            // 創建 Vision API 客戶端
-            gapi.load('client', function () {
-                gapi.client.init({
-                    apiKey: apiKey
-                });
-
-                gapi.client.load('vision', 'v1', function () {
-                    // 構建請求參數
-                    var request = {
-                        requests: [
-                            {
-                                image: {
-                                    source: {
-                                        imageUri: imageUrl
-                                    }
-                                },
-                                features: [
-                                    {
-                                        type: 'LABEL_DETECTION', // 需要標籤識別功能
-                                    }
-                                ],
-                                imageContext: {
-                                    languageHints: ['zh'] // 在這裡指定要識別的語言代碼，例如 'en' 表示英文
-                                }
-                            }
-                        ]
-                    };
-
-                    // 執行標籤識別請求
-                    gapi.client.vision.images.annotate(request).then(function (response) {
-                        // 列印完整回應資料到控制台
-                        console.log(response.result);
-                        var responseJson = response.result;
-                        var labelAnnotations = responseJson.responses[0].labelAnnotations;
-                        for (var i = 0; i < labelAnnotations.length; i++) {
-                            console.log(labelAnnotations[i].description);
-                        }
-                     });
-                });
-            });
-            */
 
             // 創建 Vision API 客戶端
             gapi.load('client', function () {
@@ -756,7 +696,7 @@
             };
             img.src = "https://msit150team02blob.blob.core.windows.net/msit150team02/tablet.jpg";
         }
-        // draw();
+
 
 
         function translateLikelihood(likelihood) {
